--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div data-role="header">
     <center>
 		<marquee direction="up"><h1 style="color:#CF9;">ANGEL DE PUEBLA</h1></marquee>
-        <img src="imagenes/muñecos.jpg" width="60" height="60" alt="german"> 
+        <img src="imagenes/munecos.jpg" width="60" height="60" alt="german"> 
       </center>
 	</div>
 	<div data-role="content">	
