cambio de nombres 2
cambio de nombres 2

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <img src="imagenes/audiR.png" width="107" height="90" alt="audi">
     </marquee>
 <object classid="clsid:166B1BCA-3F9C-11CF-8075-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/director/sw.cab#version=10,1,1,0" width="32" height="32" title="mmm">
-      <param name="src" value="music/melmas.mp3">
-      <embed src="music/Marshmello - Alone [Monstercat Official Music Video].mp3" pluginspage="http://www.adobe.com/shockwave/download/" width="132" height="132"></embed>
+      <param name="src" value="rolas/melmas.mp3">
+      <embed src="rolas/melmas.mp3" pluginspage="http://www.adobe.com/shockwave/download/" width="132" height="132"></embed>
 </object>
 </body>
     <body>
