cambio de nombre 3
cambio de nombre 3

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <marquee direction="down"><h2 style="color:#C3C">DISEÑO</h2></marquee>	
 <center>
   <p>La disposicion del motor es central trasera por primera vez en la historia de AUDI. Uno de los modelos que se uso como inspiracion a la hora de analizar en este R8 fue el Auto Union Tipo C. De esta forma, con un motor central se logra una distribucion del peso casi perfecta, con el 44% en el morro y el 56% en la cola.</p>
-  <img id="imagen" src="imagenes/diseño.png"  alt="diseño">
+  <img id="imagen" src="imagenes/diseno.png"  alt="diseño">
   </center>
         <br>
         <marquee behavior="alternate"><h2 style="color:#F00">INTERIOR</h2></marquee>
